# FFT

./: .gitignore  CMakeLists.txt  README.md
Assambly/: add.s  hello_world  hello_world.s  main.cpp
docs/: expreriance.docx  input.docx  output.docx  output_n125.docx  output_n25.docx  output_n5.docx  output_n625.docx
src/: CMakeCache.txt  CMakeLists.txt  composite_radix_dft.c  composite_radix_dft.cpp  composite_radix_dft.hpp  cosinetest.c  fft.py  five_point_fourier_transform.c  fourier_transformations.c  intrinsic.cpp  mixed_radix_dft.c  mixed_radix_dft2.c  modified_mixed_radix_dft.c
tst/: CMakeLists.txt  main.cpp
tst/testfiles/: input.txt
